--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">My First Application</string>
+    <string name="app_name">Detonating Covid-19</string>
+
+    <string name="cd_ready_button">Ready Button</string>
+    <string name="cd_home_team">Home team image</string>
+    <string name="cd_away_team">Away team image</string>
+
+    <string name="txt_versus" translatable="false">X</string>
 </resources>
